fixed z-index for secondary-nav

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ nav.secondary-nav {
 	top: 14px;
 	left: 764px;
 	width: 305px;
+	z-index:1;
 }
 nav.secondary-nav li {
 	float:left;
